# HttpArena

./: .gitattributes  .gitignore  CHANGELOG.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmark-pr.yml  benchmark.yml  notify-maintainers.yml  pr-commands.yml
data/: dataset-large.json
docker/: gcannon.Dockerfile  h2load-h3.Dockerfile  wrk.Dockerfile
frameworks/actix/: Cargo.toml  meta.json
frameworks/actix-h2c/: Dockerfile  meta.json
frameworks/actix-websocket/: Dockerfile  meta.json
frameworks/actix/src/: main.rs
frameworks/aspnet-grpc/: meta.json
frameworks/aspnet-minimal/: AppData.cs  Dockerfile  Handlers.cs  Program.cs  README.md  aspnet-minimal.csproj  meta.json
frameworks/aspnet-minimal-aot/: Dockerfile  Handlers.cs  aspnet-minimal-aot.csproj  meta.json
frameworks/aspnet-minimal-iouring/: Handlers.cs  meta.json
frameworks/aspnet-mvc/: meta.json
frameworks/aspnet-websocket/: meta.json
frameworks/axum/: Cargo.toml  Dockerfile  README.md  meta.json
frameworks/axum/src/: main.rs
frameworks/bjoern/: Dockerfile  app.py  meta.json  requirements.txt
frameworks/blitz/: Dockerfile  README.md  build.zig  build.zig.zon  meta.json
frameworks/bottle/: Dockerfile  app.py  gunicorn_conf.py  gunicorn_conf_ssl.py  launcher.py  meta.json  requirements.txt
frameworks/bun/: meta.json  server.ts
frameworks/bun-websocket/: meta.json
frameworks/caddy/: Caddyfile  Dockerfile  build.sh  go.mod  handler.go  meta.json
frameworks/carno/: meta.json  server.ts
frameworks/chi/: meta.json
frameworks/deno/: Dockerfile  main.ts  meta.json
frameworks/deno-websocket/: meta.json
frameworks/django/: meta.json  views.py
frameworks/drogon/: CMakeLists.txt  Dockerfile  main.cc  meta.json
frameworks/echo/: meta.json
frameworks/elysia/: Dockerfile  meta.json  package.json  server.ts
frameworks/express/: Dockerfile  app.js  meta.json  package.json  server.js
frameworks/fastapi/: Dockerfile  app.py  gunicorn_conf.py  launcher.py  meta.json  requirements.txt
frameworks/fastify/: meta.json  server.js
frameworks/fastpysgi/: app.py  meta.json  requirements.txt
frameworks/fastpysgi-asgi/: Dockerfile  app.py  meta.json  requirements.txt
frameworks/fastpysgi-wsgi/: Dockerfile  app.py  meta.json  requirements.txt
frameworks/fasypysgi/: Dockerfile  app.py  requirements.txt
frameworks/fiber/: meta.json
frameworks/flask/: app.py  gunicorn_conf.py  meta.json
frameworks/fletch/: Dockerfile  entrypoint.sh  exp.sh  meta.json  pubspec.yaml  reuseport_shim.c
frameworks/frankenphp-trueasync/: Dockerfile  PERFORMANCE_NOTES.md  meta.json  worker.php
frameworks/genhttp/: Dockerfile  Model.cs  Project.cs  genhttp.csproj  meta.json
frameworks/genhttp-kestrel/: Dockerfile  Model.cs  Program.cs  Project.cs  README.md  genhttp.csproj  meta.json
frameworks/gin/: Dockerfile  README.md  go.mod  go.sum  main.go  meta.json
frameworks/gleam-mist/: meta.json
frameworks/go-fasthttp/: main.go  meta.json
frameworks/go-websocket/: meta.json
frameworks/grpc-go/: meta.json
frameworks/h2o/: CMakeLists.txt  Dockerfile  meta.json
frameworks/h2o-h2c/: CMakeLists.txt  Dockerfile  meta.json
frameworks/h2o-h2c/src/: main.c
frameworks/h2o-h3/: entrypoint.sh  meta.json
frameworks/h2o-mruby/: entrypoint.sh  meta.json
frameworks/h2o/src/: main.c
frameworks/helidon/: Dockerfile  meta.json
frameworks/helidon-production/: README.md  meta.json  pom.xml
frameworks/helidon-tuned/: Dockerfile  README.md  meta.json  pom.xml
frameworks/hono/: Dockerfile  README.md  meta.json  package.json  server.js
frameworks/hono-bun/: meta.json  server.ts
frameworks/humming-bird/: meta.json
frameworks/hyper/: Dockerfile  meta.json
frameworks/hyperf/: 50_overrides.ini  Dockerfile  Dockerfile-swoole  (+3 more)
frameworks/salvo/: Cargo.toml  meta.json
frameworks/salvo/src/: main.rs
frameworks/scotty/: Dockerfile  Main.hs  meta.json  scotty-bench.cabal
frameworks/userver/userver_benchmark/: CMakeLists.txt  userver_httparena.cpp
frameworks/userver/userver_benchmark/bare/: simple_connection.cpp  simple_connection.hpp  simple_response.hpp  simple_router.cpp  simple_router.hpp  simple_server.cpp  simple_server.hpp
frameworks/userver/userver_benchmark/common/: db_helpers.cpp  db_helpers.hpp
frameworks/userver/userver_benchmark/controllers/baseline11/: handler.cpp  handler.hpp
frameworks/userver/userver_benchmark/controllers/json/: handler.cpp  handler.hpp
frameworks/userver/userver_benchmark/controllers/plaintext/: handler.cpp  handler.hpp
frameworks/userver/userver_benchmark/controllers/single_query/: handler.cpp  handler.hpp
frameworks/wtx-http2/: Cargo.toml  Dockerfile  meta.json
frameworks/wtx-http2/src/: main.rs
requests/: caching-etag.raw  crud-create-2.raw  crud-get-6.raw  crud-list-1.raw  crud-list-2.raw  crud-list-3.raw  crud-list-4.raw  crud-list-rand-1.raw  crud-list-rand-2.raw  crud-list-rand-3.raw  crud-list-rand-4.raw  crud-update-1.raw  json-gzip.raw  json-h2c-uris.txt
scripts/: archive.sh  benchmark-docker.sh  benchmark-lite-windows.sh  benchmark-lite.sh  benchmark.sh  generate-pgdb.py  rebuild_site_data.py  rerun-json-comp.sh  run.sh  validate-windows.sh  validate-ws.py  validate.sh
(+410 files in other folders)
