cmake_minimum_required(VERSION 3.10)
project(h2o-app C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
add_compile_definitions(H2O_USE_LIBUV=0)
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3")
find_library(H2O_LIB h2o-evloop REQUIRED)
find_library(YAJL_LIB yajl REQUIRED)
add_executable(h2o-app src/main.c)
find_library(BROTLI_ENC brotlienc)
find_library(BROTLI_DEC brotlidec)
find_library(BROTLI_COMMON brotlicommon)
target_link_libraries(h2o-app ${H2O_LIB} ssl crypto ${YAJL_LIB} z ${BROTLI_ENC} ${BROTLI_DEC} ${BROTLI_COMMON} pthread m)
