[package]
name = "httparena-salvo"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.76", features = ["quinn", "compression"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
