cabal-version:      3.0
name:               scotty-bench
version:            0.1.0.0
build-type:         Simple

executable scotty-bench
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -O2 -threaded -rtsopts "-with-rtsopts=-N -A64m -I0"
  build-depends:
      base                 >= 4.14 && < 5
    , scotty               >= 0.22
    , warp                 >= 3.3
    , wai                  >= 3.2
    , http-types           >= 0.12
    , aeson                >= 2.0
    , bytestring           >= 0.10
    , text                 >= 1.2
    , containers           >= 0.6
    , directory             >= 1.3
    , filepath              >= 1.4
    , zlib                  >= 0.6
    , sqlite-simple         >= 0.4
    , postgresql-simple     >= 0.6
    , mtl                  >= 2.2
  default-extensions:
    OverloadedStrings
    ScopedTypeVariables
