[package]
name = "httparena-wtx-http2"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { default-features = false, features = ["derive"], version = "1.0", }
serde_json = { default-features = false, features = ["std"], version = "1.0" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["http-server-framework", "macros", "matchit", "nightly", "optimization", "serde_json", "tokio"], version = "0.44"}

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
